--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Your Page Title Here :)</title>
+	<title>Jott.ly</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -40,34 +40,24 @@
 
 	<!-- Primary Page Layout
 	================================================== -->
-
-	<!-- Delete everything in this .container and get started on your own site! -->
-
-	<div class="container">
-		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top: 40px">Skeleton</h1>
-			<h5>Version 1.2</h5>
-			<hr />
-		</div>
-		<div class="one-third column">
-			<h3>About Skeleton?</h3>
-			<p>Skeleton is a small collection of well-organized CSS files that can help you rapidly develop sites that look beautiful at any size, be it a 17" laptop screen or an iPhone. It's based on a responsive grid, but also provides very basic CSS for typography, buttons, forms and media queries. Go ahead, resize this super basic page to see the grid in action.</p>
-		</div>
-		<div class="one-third column">
-			<h3>Three Core Principles</h3>
-			<p>Skeleton is built on three core principles:</p>
-			<ul class="square">
-				<li><strong>A Responsive Grid Down To Mobile</strong>: Elegant scaling from a browser to tablets to mobile.</li>
-				<li><strong>Fast to Start</strong>: It's a tool for rapid development with best practices</li>
-				<li><strong>Style Agnostic</strong>: It provides the most basic, beautiful styles, but is meant to be overwritten.</li>
-			</ul>
-		</div>
-		<div class="one-third column">
-			<h3>Docs &amp; Support</h3>
-			<p>The easiest way to really get started with Skeleton is to check out the full docs and info at <a href="http://www.getskeleton.com">www.getskeleton.com.</a>. Skeleton is also open-source and has a <a href="https://github.com/dhgamache/skeleton">project on git</a>, so check that out if you want to report bugs or create a pull request. If you have any questions, thoughts, concerns or feedback, please don't hesitate to email me at <a href="mailto:hi@getskeleton.com">hi@getskeleton.com</a>.</p>
-		</div>
-
-	</div><!-- container -->
+  <h1>Hello world!</h1>
+  
+  <!-- Header 
+==================================================== -->
+  <div id="header">
+    <img src="images/logo.png"/>    
+    <nav>
+      <ul>
+        <li><a href="#">Sign In</a></li>
+        <li><a href="#">Sign UP Now</a></li>
+      </ul>
+    </nav>
+    <h1>An easier way to write &amp; collaborate</h1>
+    <p>Put down the pen and paper.  Jott.ly helps you organize your <strong>life, home and office</strong>.  It's a simple way to store and share ideas with your loved ones, friends and colleagues.</p>
+    <input type="text" placeholder="Enter your email address"/>
+    <button type="submit">Sign Up Now</button>
+  </div>
+	
 
 
 <!-- End Document
