third commit - added header container for the grid

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
   <!-- Header 
 ================================================== -->
   <div id="header">
-    <img src="images/logo.png"/>    
+    <img src="images/logo.png"/> 
+    <div class="container">
+      <div class="three columns">
+        <div class="logo">
+          <a href="#"><img src="images/logo.png" alt="Jottly"/></a>
+        </div>
+      </div>
+    </div>
     <nav>
       <ul>
         <li><a href="#">Sign In</a></li>
