fourth commit - added some additional div's and containers

--- a/index.html
+++ b/index.html
@@ -45,26 +45,37 @@
   <!-- Header 
 ================================================== -->
   <div id="header">
-    <img src="images/logo.png"/> 
     <div class="container">
       <div class="three columns">
         <div class="logo">
           <a href="#"><img src="images/logo.png" alt="Jottly"/></a>
         </div>
       </div>
-    </div>
-    <nav>
+    <div class="thirteen columns">
+      <nav>
       <ul>
         <li><a href="#">Sign In</a></li>
-        <li><a href="#">Sign UP Now</a></li>
+        <li><a href="#">Sign UP Now</a>             </li>
       </ul>
-    </nav>
+      </nav>
+    </div>
+    </div>
+    <div class="container">
+      <div class="nine container">
     <h1>An easier way to write &amp; collaborate</h1>
     <p>Put down the pen and paper.  Jott.ly helps you organize your <strong>life, home and office</strong>.  It's a simple way to store and share ideas with your loved ones, friends and colleagues.</p>
+      </div>
+    </div>
+      <div class="container">
+        <div class="row">
+        <div class="five columns">
     <input type="text" placeholder="Enter your email address"/>
     <button type="submit">Sign Up Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  
 <!-- Benefits
 ================================================== -->
   <div id="benefits">
